feat: aprimora agendamento e experiencia do sistema